added favorites routes
